--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <div class="imageWrapper">
             <div class="headerBackground">
                 <div class="container">
-                    <h1>Hi, I am Lando, 23 year old frontend Engineer from Vietnam.</h1>
+                    <h1>Hi, I am potato</h1>
                     {% include header.html %}
                     <div class="iphonePreview">
 
